syntax = "proto3";

package sst;
option go_package = "github.com/MartinSimango/simple-db/internal/db/sst;sst";

import "internal/db/record.proto";

message BlockEntry {
    uint32 position = 1;
    bytes unshared_key = 2;
    uint32 shared_key_len = 3;
    bytes value = 4;
    db.RecordType record_type = 5;

}

message BlockHandle {
    fixed32 offset = 1;
    fixed32 size   = 2;
}


message IndexEntry {
    uint32 position = 1;
    bytes unshared_key  = 2;       
    uint32 shared_key_len = 3;      
    BlockHandle block_handle = 4;  
}

message DataBlockEntries {
    repeated BlockEntry entries = 1;
}

message DataBlock {
    DataBlockEntries data_block_entries = 1;
    repeated uint32 restart_points = 2;
}

message IndexEntries {
    repeated IndexEntry entries = 1;
}

message IndexBlock {
    IndexEntries index_entries = 1;
    repeated uint32 restart_points = 2;
}

message Footer {
    BlockHandle block_handle = 1;
    fixed32 version     = 2;
    fixed64 magic       = 3;
}